# 11 May 2024
## Egor Salnikov
- Added functionality for passing variables


# 4 May 2024
## Nikita Bagrov and Darya Tolmacheva
- Deployed Zabbix server and configured it
- Connected them to project Grafana https://grafana.levelware.ru
- Added universal dashboard for compute monitoring

## Iskander Shamsutdinov
- Automated compute Zabbix agents connection
- Added Zabbix agent installation to compute provisioning


# 27 April 2024
## Iskander Shamsutdinov
- Added two main steps in compute provisioning


# 20 April 2024
## Iskander Shamsutdinov
- Added logic for compute creation/deletion


# 19 April 2024
## Iskander Shamsutdinov
- Implemented basic logic for compute creation
- Added CI variable to mask api token


# 18 April 2024
## Iskander Shamsutdinov
- Set up architecture
- Configured basic CI pipeline