@@ -43,14 +43,20 @@ idna==3.7
     # via
     #   anyio
     #   httpx
+iniconfig==2.0.0
+    # via pytest
 jinja2==3.1.3
     # via ansible-core
 markupsafe==2.1.5
     # via jinja2
 packaging==24.0
-    # via ansible-core
+    # via
+    #   ansible-core
+    #   pytest
 paramiko==3.4.0
     # via pipeformer (pyproject.toml)
+pluggy==1.5.0
+    # via pytest
 pycparser==2.22
     # via cffi
 pydantic==2.7.0
@@ -59,6 +65,8 @@ pydantic-core==2.18.1
     # via pydantic
 pynacl==1.5.0
     # via paramiko
+pytest==8.2.0
+    # via pipeformer (pyproject.toml)
 pyyaml==6.0.1
     # via
     #   ansible-core
