@@ -1,0 +1,9 @@
+ssh: some-ssh
+flavor:
+  operating_system: ubuntu_22_04
+  disk_space: 15GB
+  cpu_cores: 1
+  RAM: 1GB
+  region: SPB-1
+playbooks:
+  - name: Update apt
