@@ -1,0 +1,13 @@
+ssh: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPhq/C7s6A07iJ8LGowgFCYujAtL+vF/Yhp95hnaV2oJ wensietyt@gmail.com
+flavor:
+  operating_system: ubuntu_22_04
+  disk_space: 15GB
+  cpu_cores: 1
+  RAM: 1GB
+  region: SPB-1
+playbooks:
+  - name: Update apt
+    link: https://raw.githubusercontent.com/wensiet/automata/main/playbooks/packages/update_apt.yaml
+    vars:
+      - name: .aa
+        value: 52
