@@ -1,0 +1,2 @@
+def test_mock():
+    assert True
