@@ -1,7 +1,8 @@
 # 11 May 2024
 ## Egor Salnikov
 - Added functionality for passing variables
-
+- Added proper validation for config file
+- Added unit tests for validation process
 
 # 4 May 2024
 ## Nikita Bagrov and Darya Tolmacheva
